// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewCompany component renders correct for multiple elements 1`] = `
<div
  className="row"
>
  <div
    className="col-2 position-left"
  >
    <div
      className="btn-group-vertical"
    >
      <button
        class="btn btn-info"
        onClick={[Function]}
        type="button"
      >
        Description
      </button>
      <button
        class="btn btn-dark"
        onClick={[Function]}
        type="button"
      >
        Tips Information
      </button>
      <button
        class="btn btn-secondary"
        onClick={[Function]}
        type="button"
      >
        Tips History
      </button>
    </div>
  </div>
  <div
    className="col-9"
  >
    <div
      className="container card"
    >
      <div
        className=" card-title row border border-success rounded-lg"
      >
        <div
          className="col-4"
        >
          Company Locations
        </div>
        <div
          className="col-2"
        >
          Average Tips
        </div>
      </div>
      <div
        className="row border border-primary rounded-lg"
      >
        <div
          className="col-4"
        >
          Soho
        </div>
        <div
          className="col-2"
        >
          $
          12.89
           / Hour
        </div>
      </div>
      <div
        className="row border border-primary rounded-lg"
      >
        <div
          className="col-4"
        >
          Chelsea
        </div>
        <div
          className="col-2"
        >
          $
          13.54
           / Hour
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewCompany component renders correct for single element 1`] = `
<div
  className="row"
>
  <div
    className="col-2 position-left"
  >
    <div
      className="btn-group-vertical"
    >
      <button
        class="btn btn-info"
        onClick={[Function]}
        type="button"
      >
        Description
      </button>
      <button
        class="btn btn-dark"
        onClick={[Function]}
        type="button"
      >
        Tips Information
      </button>
      <button
        class="btn btn-secondary"
        onClick={[Function]}
        type="button"
      >
        Tips History
      </button>
    </div>
  </div>
  <div
    className="col-9"
  >
    <div
      className="container card"
    >
      <div
        className=" card-title row border border-success rounded-lg"
      >
        <div
          className="col-4"
        >
          Company Locations
        </div>
        <div
          className="col-2"
        >
          Average Tips
        </div>
      </div>
      <div
        className="row border border-primary rounded-lg"
      >
        <div
          className="col-4"
        >
          Soho
        </div>
        <div
          className="col-2"
        >
          $
          12.89
           / Hour
        </div>
      </div>
    </div>
  </div>
</div>
`;
